# docs/swagger.json
@@ -26,10 +26,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Post"
-                            }
+                            "$ref": "#/definitions/models.PaginatedPosts"
                         }
                     },
                     "404": {
@@ -54,6 +51,29 @@
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "models.PaginatedPosts": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Post"
+                    }
+                },
+                "limit": {
+                    "type": "integer"
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer"
+                },
+                "total_pages": {
+                    "type": "integer"
                 }
             }
         },
