# models/post.go
@@ -4,6 +4,14 @@ type ErrorResponse struct {
 	Message string `json:"message"`
 }
 
+type PaginatedPosts struct {
+	Data       []Post `json:"data"`
+	Page       int    `json:"page"`
+	Limit      int    `json:"limit"`
+	Total      int    `json:"total"`
+	TotalPages int    `json:"total_pages"`
+}
+
 type Post struct {
 	ID        int    `json:"id"`
 	Title     string `json:"title"`
